Commit for version 1.4 --> Added Contacts Functionality. --> Added provision to call a contact number. --> Added provision to message that person. --> Modified some color combination of application. --> Upgraded build.gradle. --> Added some functionalities to calculate space statistics.  --> Changed UI of About activity.

--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -24,7 +24,8 @@
         android:layout_below="@id/toolbar"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
