--- a/app/src/main/res/layout/list_item_contacts_row.xml
+++ b/app/src/main/res/layout/list_item_contacts_row.xml
@@ -30,13 +30,13 @@
                 android:padding="10dp"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/linearLayoutContactInfo"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/imgVwUserIcon"
-                android:layout_toEndOf="@+id/imgVwUserIcon"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -67,19 +67,45 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imgVwCallIcon"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@mipmap/ic_call_phone"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/app_name"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:scaleType="fitCenter"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@+id/linearLayoutContactInfo"
+                android:layout_toRightOf="@+id/imgVwUserIcon"
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/buttonCallIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Call"
+                    android:drawableRight="@mipmap/ic_call_phone"
+                    android:layout_weight="1"
+                    android:drawablePadding="5dp"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="PT-sans"
+                    android:layout_gravity="left"
+                    style="?android:attr/borderlessButtonStyle"/>
+                <Button
+                    android:id="@+id/buttonSendMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Message"
+                    android:drawableRight="@mipmap/ic_message"
+                    android:layout_weight="1"
+                    android:fontFamily="PT-sans"
+                    android:layout_gravity="left"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="16sp"/>
+
+
+            </LinearLayout>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
