--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -42,7 +42,7 @@
             android:text="@string/app_description"
             android:lines="3"
             android:textSize="15sp"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:gravity="center_horizontal"
             android:layout_below="@id/app_name"
             android:layout_centerHorizontal="true" />
@@ -84,9 +84,10 @@
                     android:layout_marginLeft="@dimen/horizontal_margin"
                     android:layout_marginStart="@dimen/horizontal_margin"
                     android:layout_marginTop="10dp"
-                    android:maxWidth="80dp"
+                    android:maxWidth="100dp"
                     android:maxHeight="80dp"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop"
+                    android:src="@mipmap/about_rudraksh_pahade_profile_pic"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -184,7 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:foreground="?android:attr/selectableItemBackground"
-                card_view:cardBackgroundColor="@color/md_white_1000">
+                card_view:cardBackgroundColor="@color/card_facebook">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -192,7 +193,9 @@
                     android:layout_marginLeft="@dimen/horizontal_margin"
                     android:layout_marginStart="@dimen/horizontal_margin"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_facebook" />
+                    android:src="@drawable/facebook_100"
+                    android:maxWidth="100dp"
+                    android:maxHeight="80dp" />
                 <TextView
                     android:fontFamily="sans-serif-light"
                     android:layout_width="wrap_content"
@@ -205,7 +208,8 @@
                     android:layout_marginLeft="70dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginRight="30dp"
-                    android:layout_marginEnd="30dp" />
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@android:color/white"/>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -216,7 +220,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:foreground="?android:attr/selectableItemBackground"
-                card_view:cardBackgroundColor="@color/md_white_1000">
+                card_view:cardBackgroundColor="@color/card_twitter">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -224,7 +228,9 @@
                     android:layout_marginLeft="@dimen/horizontal_margin"
                     android:layout_marginStart="@dimen/horizontal_margin"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_twitter" />
+                    android:src="@drawable/twitter_100"
+                    android:maxWidth="100dp"
+                    android:maxHeight="80dp"/>
                 <TextView
                     android:fontFamily="sans-serif-light"
                     android:layout_width="wrap_content"
@@ -237,7 +243,8 @@
                     android:layout_marginLeft="70dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginRight="30dp"
-                    android:layout_marginEnd="30dp" />
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@android:color/white"/>
             </android.support.v7.widget.CardView>
 
         </RelativeLayout>
