--- a/app/src/main/res/layout/after_memory_clean_activity.xml
+++ b/app/src/main/res/layout/after_memory_clean_activity.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/title_bg">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <ImageView
         android:layout_width="225dp"
         android:layout_height="225dp"
