-- Changed ActivityAbout to Fragment. -- Added circular reveal transition on main viewGroup. -- Changed bottom navigation library.

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,15 +4,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <include
+    <!--<include
         android:id="@+id/toolbarAbout"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar"/>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="320dp"
-        android:id="@+id/relativeAboutMain"
-        android:layout_below="@+id/toolbarAbout">
+        android:id="@+id/relativeAboutMain">
 
         <developer.shivam.library.DiagonalView
             android:id="@+id/diagonal_view"
