Commit of version 2.0 - --> Working code for FragmentHome

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,54 +19,11 @@
 
     </FrameLayout>
 
-    <!--<com.luseen.spacenavigation.SpaceNavigationView
-        android:id="@+id/space"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        app:space_background_color="@color/app_background"/>-->
-
-    <com.ss.bottomnavigation.BottomNavigation
+    <com.roughike.bottombar.BottomBar
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        app:mode="phone">
-        <com.ss.bottomnavigation.TabItem
-            android:id="@+id/tab_home"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:tab_text="Home"
-            app:tab_icon="@drawable/ic_home"/>
-        <com.ss.bottomnavigation.TabItem
-            android:id="@+id/tab_favorites"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:tab_text="Favorites"
-            app:tab_icon="@drawable/ic_favorite"/>
-        <com.ss.bottomnavigation.TabItem
-            android:id="@+id/tab_search"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:tab_text="Search"
-            app:tab_icon="@drawable/ic_search"/>
-        <com.ss.bottomnavigation.TabItem
-            android:id="@+id/tab_about"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:tab_text="About"
-            app:tab_icon="@drawable/ic_about_person"/>
-        <com.ss.bottomnavigation.TabItem
-            android:id="@+id/tab_more"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:tab_text="More"
-            app:tab_icon="@drawable/ic_more_white_24dp"/>
-    </com.ss.bottomnavigation.BottomNavigation>
+        app:bb_tabXmlResource="@xml/bottombar_color_changing_tabs"
+        app:bb_behavior="shifting|underNavbar" />
 </RelativeLayout>
