--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,5 @@
     <integer name="card_flip_time_max">1000</integer>
     <integer name="card_flip_time_full">500</integer>
     <integer name="card_flip_time_half">250</integer>
+    <integer name="animation_duration">300</integer>
 </resources>
