--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -5,5 +5,6 @@
     <item
         android:id="@+id/action_favorite"
         android:title="@string/action_favorites"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        app:actionLayout="@layout/layout_app_favorite_menu_item"/>
 </menu>
