--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff25a599</color>
-    <color name="colorPrimaryDark">#ff25a599</color>
+    <color name="colorPrimary">#ff2980b9</color>
+    <color name="colorPrimaryDark">#ff3498db</color>
     <color name="colorAccent">#9E9E9E</color>
-    <color name="primary">#ff25a599</color>
-    <color name="primary_dark">#ff25a599</color>
+    <color name="primary">#ff2980b9</color>
+    <color name="primary_dark">#ff3498db</color>
     <color name="fab">#607D8B</color>
     <color name="md_blue_grey_500">#607D8B</color>
     <color name="md_blue_grey_700">#455A64</color>
     <color name="md_purple_500">#9C27B0</color>
     <color name="md_purple_700">#7B1FA2</color>
+    <color name="amethyst">#9b59b6</color>
 
     <color name="text_primary">#212121</color>
     <color name="bkg_card">#8C9EFF</color>
