--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,11 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
+        android:textSize="32sp"
         android:textColor="@color/white"
         android:layout_below="@+id/imgVwAppIcon"
         android:layout_gravity="center|center_horizontal"
         android:gravity="center"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="8dp"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </RelativeLayout>
