--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
         ads:adUnitId="@string/ad_mob_interstitial_id">
 
     </com.google.android.gms.ads.AdView>
@@ -192,67 +194,7 @@
                     android:ellipsize="end"
                     android:singleLine="true" />
             </android.support.v7.widget.CardView>
-            <!--<android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_below="@id/uninstall_card"
-                android:id="@+id/cache_card"
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_margin="5dp"
-                android:visibility="visible">
-                <TextView
-                    android:fontFamily="sans-serif-thin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="@dimen/horizontal_margin"
-                    android:layout_marginStart="@dimen/horizontal_margin"
-                    android:text="@string/dialog_cache"
-                    android:textSize="25sp" />
-                <TextView
-                    android:fontFamily="sans-serif-thin"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/horizontal_description_margin"
-                    android:layout_marginRight="@dimen/horizontal_description_margin"
-                    android:layout_marginTop="50dp"
-                    android:text="@string/dialog_cache_description"
-                    android:textSize="14sp"
-                    android:ellipsize="end"
-                    android:singleLine="true" />
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_below="@id/cache_card"
-                android:id="@+id/clear_data_card"
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_margin="5dp"
-                android:visibility="visible">
-                <TextView
-                    android:fontFamily="sans-serif-thin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="@dimen/horizontal_margin"
-                    android:layout_marginStart="@dimen/horizontal_margin"
-                    android:text="@string/dialog_clear_data"
-                    android:textSize="25sp" />
-                <TextView
-                    android:id="@+id/clear_data_description"
-                    android:fontFamily="sans-serif-thin"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/horizontal_description_margin"
-                    android:layout_marginRight="@dimen/horizontal_description_margin"
-                    android:layout_marginTop="50dp"
-                    android:text="@string/dialog_clear_data_description"
-                    android:textSize="14sp"
-                    android:ellipsize="end"
-                    android:singleLine="true" />
-            </android.support.v7.widget.CardView>-->
+
         </RelativeLayout>
     </ScrollView>
 
