--- a/app/src/main/res/layout/app_layout.xml
+++ b/app/src/main/res/layout/app_layout.xml
@@ -63,13 +63,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
                     android:layout_marginStart="12dp"
-                    android:background="@color/colorPrimaryDark"
+                    android:background="@color/card_blue"
                     android:text="@string/button_extract" />
                 <com.gc.materialdesign.views.ButtonFlat
                     android:id="@+id/btnShare"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryDark"
+                    android:background="@color/card_blue"
                     android:text="@string/button_share" />
             </LinearLayout>
         </RelativeLayout>
