--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,19 @@
         layout="@layout/toolbar" />
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        android:visibility="gone"
+        android:visibility="visible"
+        android:layout_alignParentBottom="true"
         ads:adUnitId="@string/ad_mob_interstitial_id"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_content"
-        android:layout_below="@id/toolbar">
+        android:layout_below="@id/toolbar"
+        android:layout_above="@+id/adView">
         <com.pnikosis.materialishprogress.ProgressWheel
             android:id="@+id/progress"
             android:layout_width="80dp"
